--- a/about.html
+++ b/about.html
@@ -1,64 +1,1 @@
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>About — Project.PAW</title>
-  <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
-  <style>
-    .hero{background:radial-gradient(1200px 600px at 50% -100px, var(--g1), transparent 60%),linear-gradient(135deg,var(--g1),var(--g2));border-bottom:1px solid var(--line)}
-    .hero-wrap{max-width:1040px;margin:0 auto;padding:72px 16px 48px;text-align:center}
-    .headline{font-size:2.2rem;font-weight:900;letter-spacing:-.02em;margin:0 0 6px}
-    .hero-pills{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;margin-top:12px}
-    .section{padding:42px 0}.wrap{max-width:1040px;margin:0 auto;padding:0 16px}
-    .grid3{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
-    .center{text-align:center}
-  </style>
-</head>
-<body>
-  <div data-include="header"></div>
-
-  <section class="hero">
-    <div class="hero-wrap">
-      <h1 class="headline">법인 없는 첫 후원 플랫폼</h1>
-      <div class="hero-pills">
-        <span class="pill">🧑‍🤝‍🧑 개인↔개인</span>
-        <span class="pill">🐾 책임 필수</span>
-        <span class="pill">❤️ 돈보다 연결</span>
-        <span class="pill">🙋‍♂️ 비영리 1인</span>
-      </div>
-      <div style="margin-top:18px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-        <a class="btn primary" href="project_list.html">🐾 지금 구조자 만나보기</a>
-        <a class="btn ghost" href="create.html">내가 등록하기</a>
-      </div>
-    </div>
-  </section>
-
-  <section class="section">
-    <div class="wrap grid3">
-      <div class="card" style="padding:18px;text-align:center"><div style="font-size:1.8rem">🧑‍🤝‍🧑</div><h3 style="margin:8px 0 6px">직접 연결</h3><div style="color:#4b5563">중간 법인 없이 바로 연결.</div></div>
-      <div class="card" style="padding:18px;text-align:center"><div style="font-size:1.8rem">🐾</div><h3 style="margin:8px 0 6px">책임의 설계</h3><div style="color:#4b5563">자기부담·증빙·후기 필수.</div></div>
-      <div class="card" style="padding:18px;text-align:center"><div style="font-size:1.8rem">❤️</div><h3 style="margin:8px 0 6px">연결 우선</h3><div style="color:#4b5563">‘마음 수’가 먼저.</div></div>
-    </div>
-  </section>
-
-  <section class="section" style="background:linear-gradient(135deg,var(--g1),var(--g2));border-top:1px solid var(--line);border-bottom:1px solid var(--line)">
-    <div class="wrap center">
-      <h3 style="margin:0 0 8px;font-size:1.4rem;font-weight:900">왜 이제야 나왔냐고요?</h3>
-      <p style="color:#374151;font-weight:700;margin:0 0 14px">제도권이 놓친 사이를 직접 연결로 메웁니다. 책임 위에 마음을 얹습니다.</p>
-      <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-        <a class="btn primary" href="project_list.html">🐾 구조자 만나보기</a>
-        <a class="btn ghost" href="create.html">등록하기</a>
-      </div>
-    </div>
-  </section>
-
-  <div data-include="footer"></div>
-
-  <script type="module">
-    import { injectLayout } from './js/include.js';
-    injectLayout({active:'about'});
-  </script>
-</body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>About</title><link rel='stylesheet' href='common.css'></head><body><div data-include='header'></div><main class='container' style='padding:24px 16px'><h1>About Project.PAW</h1></main><div data-include='footer'></div><script type='module'>import {injectLayout} from './js/include.js'; injectLayout();</script></body></html>
