--- a/project.html
+++ b/project.html
@@ -1,89 +1,15 @@
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>프로젝트 상세 — Project.PAW</title>
-  <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
-  <style>
-    .wrap{max-width:1040px;margin:0 auto;padding:20px 16px}
-    .header{display:grid;grid-template-columns:1fr;gap:16px}
-    .cover{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:16px;border:1px solid #eef2f7}
-    .title-row{display:flex;align-items:flex-start;justify-content:space-between;gap:12px;margin-top:6px}
-    h1.title{font-size:1.6rem;font-weight:900;margin:0}
-    .chip{display:inline-block;padding:2px 10px;border-radius:999px;font-size:.85rem;border:1px solid #e5e7eb;color:#374151}
-    .chip.approved{background:#ecfdf5;border-color:#bbf7d0;color:#065f46}
-    .chip.pending{background:#fff7ed;border-color:#fed7aa;color:#9a3412}
-    .stats{display:flex;flex-wrap:wrap;gap:12px;margin-top:8px}
-    .hearts{display:flex;align-items:center;gap:8px;font-weight:800}
-    .hearts .count{padding:6px 12px;border-radius:10px;background:#f1f5f9}
-    .money{color:#4b5563}
-    .meta{color:#6b7280;font-size:.95rem}
-    .actions{display:flex;gap:10px;margin-top:12px}
-    .btn{padding:10px 14px;border-radius:12px;font-weight:800;text-decoration:none;border:1px solid #111}
-    .btn.primary{background:#111;color:#fff}
-    .btn.ghost{background:#fff;color:#111;border-color:#e5e7eb}
-    .section{margin-top:24px}
-    .section h2{font-size:1.1rem;font-weight:900;margin:0 0 10px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:10px}
-    .thumb{width:100%;aspect-ratio:4/3;object-fit:cover;border-radius:10px;border:1px solid #eef2f7}
-    @media(min-width:900px){ .header{grid-template-columns:560px 1fr} }
-  </style>
-</head>
-<body>
-  <div data-include="header"></div>
-  <main class="wrap" id="app"></main>
-  <div data-include="footer"></div>
-
-  <script type="module">
-    import { injectLayout } from './js/include.js';
-    import { apiGetProject } from './js/api.js';
-    injectLayout({active:'project'});
-
-    const $app = document.getElementById('app');
-    const id = new URL(location.href).searchParams.get('id');
-    const fmt = n => Number(n||0).toLocaleString('ko-KR');
-    const coverOf = p => p.coverUrl || p.representativeImageUrl || p.representativeImage || 'img/placeholder.svg';
-    const heartsOf = p => (p.supportersCount ?? (Array.isArray(p.supporters)? p.supporters.length:0)) || 0;
-    const dateStr = ts => { if(!ts) return ''; const d = new Date(ts.seconds ? ts.seconds*1000 : ts); return `${d.getFullYear()}.${String(d.getMonth()+1).padStart(2,'0')}.${String(d.getDate()).padStart(2,'0')}`; };
-
-    (async function render(){
-      try{
-        const p = await apiGetProject(id);
-        const gallery = p.galleryUrls || p.gallery || [];
-        const receipts = p.receiptUrls || p.receipts || [];
-        const kakao = p.kakaoInviteLink;
-
-        $app.innerHTML = `
-          <div class="header">
-            <img class="cover" src="${coverOf(p)}" alt="${p.name || 'project cover'}"/>
-            <div>
-              <div class="title-row">
-                <h1 class="title">${p.name ?? '(이름 없음)'}</h1>
-                ${p.adminApproved ? '<span class="chip approved">승인</span>' : '<span class="chip pending">대기</span>'}
-              </div>
-              <div class="stats">
-                <div class="hearts">❤️ <span class="count">연결된 마음 ${heartsOf(p)}명</span></div>
-                <div class="money">목표 ${fmt(p.goalAmount)}원 · 구조자 부담 ${fmt(p.rescuerContribution)}원</div>
-                <div class="meta">등록일 ${dateStr(p.createdAt)}</div>
-              </div>
-              <div class="actions">
-                ${kakao ? `<a class="btn primary" href="${kakao}" target="_blank" rel="noopener">카카오톡으로 연결하기</a>` : ''}
-                <a class="btn ghost" href="project_list.html">목록으로</a>
-              </div>
-              <div class="section"><h2>상황 요약</h2><p>${p.summary ?? ''}</p></div>
-            </div>
-          </div>
-          <div class="section"><h2>상세 설명</h2><p>${(p.description ?? '').replace(/\n/g,'<br/>')}</p></div>
-          ${Array.isArray(gallery)&&gallery.length?`<div class="section"><h2>구조 상황 사진</h2><div class="grid">${gallery.map(src=>`<img class="thumb" src="${src}" alt="gallery"/>`).join('')}</div></div>`:''}
-          ${Array.isArray(receipts)&&receipts.length?`<div class="section"><h2>영수증</h2><div class="grid">${receipts.map(src=>`<img class="thumb" src="${src}" alt="receipt"/>`).join('')}</div></div>`:''}
-        `;
-      }catch(e){
-        console.error(e);
-        $app.innerHTML = '<div class="section"><h2>프로젝트를 불러오지 못했습니다</h2><p class="meta">잠시 후 다시 시도해주세요.</p><div class="actions"><a class="btn ghost" href="project_list.html">목록으로</a></div></div>';
-      }
-    })();
-  </script>
-</body>
-</html>
+<!doctype html><html lang="ko"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>프로젝트 상세</title><link rel="stylesheet" href="common.css"/><link rel="stylesheet" href="app.min.css"/>
+<style>.wrap{max-width:1040px;margin:0 auto;padding:20px 16px}.cover{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:16px;border:1px solid #eef2f7}.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:10px}.thumb{width:100%;aspect-ratio:4/3;object-fit:cover;border-radius:10px;border:1px solid #eef2f7}</style>
+</head><body><div data-include="header"></div><main class="wrap" id="app"></main><div data-include="footer"></div>
+<script type="module">
+import { injectLayout } from './js/include.js'; import { apiGetProject } from './js/api.js'; injectLayout();
+const $app=document.getElementById('app'); const id=new URL(location.href).searchParams.get('id'); const cover=p=>p.coverUrl||p.representativeImageUrl||'img/placeholder.svg'; const fmt=n=>Number(n||0).toLocaleString('ko-KR');
+(async()=>{ try{ const p=await apiGetProject(id); const g=p.galleryUrls||[]; const r=p.receiptUrls||[]; $app.innerHTML = `
+  <img class="cover" src="${cover(p)}"/><h1>${p.name??'(이름 없음)'} ${p.adminApproved?'<span class="pill" style="background:#ecfdf5;border-color:#bbf7d0;color:#065f46">승인</span>':'<span class="pill" style="background:#fff7ed;border-color:#fed7aa;color:#9a3412">대기</span>'}</h1>
+  <div class="muted">목표 ${fmt(p.goalAmount)}원 · 구조자 부담 ${fmt(p.rescuerContribution)}원</div>
+  <h3>상황 요약</h3><p>${p.summary??''}</p>
+  <h3>상세 설명</h3><p>${(p.description??'').replace(/\n/g,'<br/>')}</p>
+  ${g.length?'<h3>구조 상황 사진</h3><div class="grid">'+g.map(s=>`<img class="thumb" src="${s}">`).join('')+'</div>':''}
+  ${r.length?'<h3>영수증</h3><div class="grid">'+r.map(s=>`<img class="thumb" src="${s}">`).join('')+'</div>':''}`; }catch(e){ $app.innerHTML='<p>불러오기 실패</p>'; } })();
+</script></body></html>
