--- a/admin.html
+++ b/admin.html
@@ -7,21 +7,21 @@
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <style>
-    .wrap{max-width:1040px;margin:0 auto;padding:20px 16px}
-    .toolbar{display:flex;gap:8px;flex-wrap:wrap;margin:6px 0 16px}
-    .toolbar input,.toolbar select{padding:10px;border:1px solid #e5e7eb;border-radius:10px}
-    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:12px}
-    .card{display:flex;flex-direction:column;gap:10px;padding:12px}
-    .row{display:flex;gap:8px}
-    .row>*{flex:1}
-    label{display:block;font-weight:700;margin-bottom:6px}
-    input{width:100%;padding:10px;border:1px solid #e5e7eb;border-radius:8px}
-    .chip{display:inline-block;padding:2px 10px;border-radius:999px;font-size:.85rem;border:1px solid #e5e7eb;color:#374151}
-    .chip.ok{background:#ecfdf5;border-color:#bbf7d0;color:#065f46}
-    .chip.pending{background:#fff7ed;border-color:#fed7aa;color:#9a3412}
-    .actions{display:flex;gap:8px;justify-content:flex-end}
-    .btn{padding:10px 12px;border-radius:10px;border:1px solid #111;background:#111;color:#fff}
-    .btn.secondary{background:#fff;color:#111;border:1px solid #e5e7eb}
+    .wrap { max-width:1040px; margin:0 auto; padding:20px 16px }
+    .toolbar { display:flex; gap:8px; flex-wrap:wrap; margin:6px 0 16px }
+    .toolbar input, .toolbar select { padding:10px; border:1px solid #e5e7eb; border-radius:10px }
+    .cards { display:grid; grid-template-columns:repeat(auto-fill,minmax(320px,1fr)); gap:12px }
+    .card { display:flex; flex-direction:column; gap:10px; padding:12px; border:1px solid #ddd; border-radius:12px; background:#fff }
+    .row { display:flex; gap:8px }
+    .row>* { flex:1 }
+    label { display:block; font-weight:700; margin-bottom:6px }
+    input { width:100%; padding:10px; border:1px solid #e5e7eb; border-radius:8px }
+    .chip { display:inline-block; padding:2px 10px; border-radius:999px; font-size:.85rem; border:1px solid #e5e7eb; color:#374151 }
+    .chip.ok { background:#ecfdf5; border-color:#bbf7d0; color:#065f46 }
+    .chip.pending { background:#fff7ed; border-color:#fed7aa; color:#9a3412 }
+    .actions { display:flex; gap:8px; justify-content:flex-end }
+    .btn { padding:10px 12px; border-radius:10px; border:1px solid #111; background:#111; color:#fff; cursor:pointer }
+    .btn.secondary { background:#fff; color:#111; border:1px solid #e5e7eb }
   </style>
 </head>
 <body>
@@ -47,9 +47,10 @@
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects, apiToggleApprove } from './js/api.js';
-    injectLayout({active:'about'});
 
-    // 간단 비밀번호 보호
+    injectLayout({ active:'about' });
+
+    // 비밀번호 체크
     (function(){
       const EXPECT = 'paw-admin';
       const viaQuery = new URL(location.href).searchParams.get('key');
@@ -67,29 +68,27 @@
       if(f==='pending' && p.adminApproved) return false;
       if(f==='approved' && !p.adminApproved) return false;
       if(!q) return true;
-      const hay=[p.name,p.summary,p.description,p.registrantKakaoId]
-        .map(v=>(v??'')+'').join(' ').toLowerCase();
+      const hay=[p.name,p.summary,p.description,p.registrantKakaoId].map(v=>(v??'')+'').join(' ').toLowerCase();
       return hay.includes(q.toLowerCase());
     }
 
     function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
 
     async function render(){
-      const status = $filter.value;   // ✅ 선택된 값 그대로 전달
-      const list = (await apiListProjects({ status }))
-        .filter(p=>match(p,$search.value.trim(),$filter.value));
-      if(!list.length){ 
-        $cards.innerHTML = '<div class="muted">표시할 프로젝트 없음</div>'; 
-        return; 
+      const status = $filter.value==='all' ? 'all' : $filter.value;
+      const list = (await apiListProjects({ status })).filter(p=>match(p,$search.value.trim(),$filter.value));
+
+      if(!list.length){
+        $cards.innerHTML = '<div class="muted">표시할 프로젝트 없음</div>';
+        return;
       }
+
       $cards.innerHTML = list.map(p => `
         <div class="card" data-id="${p.id}">
           <div class="row" style="align-items:center;gap:12px">
-            <img src="${p.representativeImageUrl || 'img/placeholder.svg'}" 
-                 style="width:88px;height:88px;object-fit:cover;border-radius:10px;border:1px solid #eee"/>
+            <img src="${p.representativeImageUrl || 'img/placeholder.svg'}" style="width:88px;height:88px;object-fit:cover;border-radius:10px;border:1px solid #eee"/>
             <div style="flex:1">
-              <div style="font-weight:900">
-                ${p.name ?? '(이름 없음)'} 
+              <div style="font-weight:900">${p.name ?? '(이름 없음)'}
                 <span class="${p.adminApproved?'chip ok':'chip pending'}" style="margin-left:6px">
                   ${p.adminApproved?'승인':'대기'}
                 </span>
@@ -98,11 +97,18 @@
               <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
             </div>
           </div>
+          <div class="row">
+            <div><label>병원명</label><input name="hospitalName" value="${p.hospitalName ?? ''}"/></div>
+            <div><label>계좌번호</label><input name="bankAccount" value="${p.bankAccount ?? ''}"/></div>
+          </div>
+          <div><label>카카오톡 초대링크</label><input name="kakaoInviteLink" value="${p.kakaoInviteLink ?? ''}"/></div>
+          <div class="row">
+            <div><label>등록자 카카오ID</label><input disabled value="${p.registrantKakaoId ?? ''}"/></div>
+            <div><label>프로젝트 ID</label><input disabled value="${p.id}"/></div>
+          </div>
           <div class="actions">
             <a class="btn secondary" href="project.html?id=${encodeURIComponent(p.id)}">상세보기</a>
-            <button class="btn secondary" data-action="toggle">
-              ${p.adminApproved?'승인 해제':'승인하기'}
-            </button>
+            <button class="btn secondary" data-action="toggle">${p.adminApproved?'승인 해제':'승인하기'}</button>
           </div>
         </div>
       `).join('');
@@ -125,8 +131,6 @@
     $filter.addEventListener('change', render);
     $refresh.addEventListener('click', render);
 
-    // ✅ 초기 진입 시 무조건 'all'로 고정
-    $filter.value = 'all';
     render();
   </script>
 </body>
