--- a/index.html
+++ b/index.html
@@ -1,25 +1,84 @@
-<!doctype html><html lang="ko"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Project.PAW</title>
-<link rel="stylesheet" href="common.css"/><link rel="stylesheet" href="app.min.css"/>
-<style>.hero{background:radial-gradient(1200px 600px at 50% -100px, var(--g1), transparent 60%),linear-gradient(135deg,var(--g1),var(--g2));padding:84px 16px 60px;border-bottom:1px solid var(--line);text-align:center}
-.cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px}.card img{width:100%;height:180px;object-fit:cover;border-top-left-radius:16px;border-top-right-radius:16px}.card-body{padding:14px;display:flex;flex-direction:column;gap:8px}
-.chip{display:inline-block;padding:2px 10px;border-radius:999px;font-size:.8rem;border:1px solid #e5e7eb;color:#374151}.chip.approved{background:#ecfdf5;border-color:#bbf7d0;color:#065f46}.chip.pending{background:#fff7ed;border-color:#fed7aa;color:#9a3412}</style>
-</head><body>
-<div data-include="header"></div>
-<section class="hero"><div class="container">
-<h1>법인 없는 첫 후원 플랫폼</h1>
-<p class="sub">현재 <b>Beta 서비스</b>입니다. PG(결제) 연결 전까지는 <b>카카오톡 단톡방</b>으로 연결합니다.</p>
-<div class="actions"><a class="btn primary" href="project_list.html">🐾 지금 구조자 만나보기</a> <a class="btn ghost" href="create.html">등록하기</a></div>
-</div></section>
-<section class="section"><div class="container"><div id="home-cards" class="cards"></div></div></section>
-<div data-include="footer"></div>
-<script type="module">
-  import { injectLayout } from './js/include.js'; import { apiListProjects } from './js/api.js'; injectLayout();
-  const wrap=document.getElementById('home-cards'); const fmt=n=>Number(n||0).toLocaleString('ko-KR'); const cover=p=>p.coverUrl||p.representativeImageUrl||'img/placeholder.svg';
-  (async()=>{ try{ const list=await apiListProjects({limit:4,status:'approved'}); wrap.innerHTML=list.map(p=>`
-    <article class="card"><img src="${cover(p)}"/><div class="card-body">
-    <div style="display:flex;justify-content:space-between;align-items:center;gap:8px"><strong>${p.name??'(이름 없음)'}</strong>${p.adminApproved?'<span class="chip approved">승인</span>':'<span class="chip pending">대기</span>'}</div>
-    <div class="muted">${p.summary??''}</div><div style="text-align:right"><a class="btn primary" style="padding:8px 12px;border-radius:10px" href="project.html?id=${encodeURIComponent(p.id)}">상세보기</a></div>
-    </div></article>`).join(''); if(!list.length) wrap.innerHTML='<div class="muted">아직 등록이 없습니다.</div>'; }catch(e){ wrap.innerHTML='<div class="muted">목록을 불러오지 못했습니다.</div>'; } })();
-</script>
-</body></html>
+<!doctype html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Project.PAW — 법인 없는 첫 후원 플랫폼</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
+  <style>
+    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
+    .hero { text-align:center; padding:100px 20px; background:linear-gradient(135deg,#fff 0%,#fef9f9 50%,#f5f7ff 100%); }
+    .hero h1 { font-size:2rem; font-weight:900; margin-bottom:14px; }
+    .hero p { font-size:1.1rem; color:#555; margin-bottom:20px; }
+    .btn { display:inline-block; padding:12px 20px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; }
+    .btn.primary { background:#111; color:#fff; }
+    .btn.secondary { background:#fff; border:1px solid #ddd; color:#111; }
+    .projects { max-width:1040px; margin:50px auto; padding:0 16px; }
+    .projects h2 { font-size:1.4rem; font-weight:700; margin-bottom:16px; }
+    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:16px; }
+    .card { background:#fff; border:1px solid #eee; border-radius:14px; padding:14px; display:flex; flex-direction:column; gap:10px; transition:all .2s; }
+    .card:hover { box-shadow:0 4px 10px rgba(0,0,0,0.05); transform:translateY(-2px); }
+    .card img { width:100%; height:180px; object-fit:cover; border-radius:10px; }
+    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; }
+    .muted { color:#777; font-size:.9rem; }
+    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
+  </style>
+</head>
+<body>
+  <div data-include="header"></div>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>법인 없는 첫 후원 플랫폼</h1>
+    <p>현재 <strong>Beta 서비스</strong>입니다.<br/>
+       PG(결제) 연결 전까지는 <b>카카오톡 단톡방</b>을 통해 연결됩니다.</p>
+    <a href="projects.html" class="btn primary">🐾 지금 구조자 만나보기</a>
+    <a href="create.html" class="btn secondary">등록하기</a>
+  </section>
+
+  <!-- Projects Section -->
+  <section class="projects">
+    <h2>진행 중인 프로젝트</h2>
+    <div id="projects-grid" class="grid">
+      <div class="muted">불러오는 중...</div>
+    </div>
+  </section>
+
+  <div data-include="footer"></div>
+
+  <script type="module">
+    import { injectLayout } from './js/include.js';
+    import { apiListProjects } from './js/api.js';
+
+    injectLayout({ active:'home' });
+
+    const $grid = document.getElementById('projects-grid');
+
+    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
+
+    async function render(){
+      try {
+        const list = await apiListProjects({ status:'approved', limit:12 });
+        if(!list.length){
+          $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
+          return;
+        }
+        $grid.innerHTML = list.map(p => `
+          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
+            <img src="${p.representativeImageUrl || 'img/placeholder.svg'}" alt=""/>
+            <h3>${p.name ?? '(이름 없음)'}</h3>
+            <div class="muted">${p.summary ?? ''}</div>
+            <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
+          </a>
+        `).join('');
+      } catch (e) {
+        console.error(e);
+        $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+      }
+    }
+
+    render();
+  </script>
+</body>
+</html>
