--- a/index.html
+++ b/index.html
@@ -1,84 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Project.PAW — 법인 없는 첫 후원 플랫폼</title>
-  <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
-  <style>
-    body { background:#fafafa; font-family:'Pretendard',sans-serif; }
-    .hero { text-align:center; padding:100px 20px; background:linear-gradient(135deg,#fff 0%,#fef9f9 50%,#f5f7ff 100%); }
-    .hero h1 { font-size:2rem; font-weight:900; margin-bottom:14px; }
-    .hero p { font-size:1.1rem; color:#555; margin-bottom:20px; }
-    .btn { display:inline-block; padding:12px 20px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; }
-    .btn.primary { background:#111; color:#fff; }
-    .btn.secondary { background:#fff; border:1px solid #ddd; color:#111; }
-    .projects { max-width:1040px; margin:50px auto; padding:0 16px; }
-    .projects h2 { font-size:1.4rem; font-weight:700; margin-bottom:16px; }
-    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:16px; }
-    .card { background:#fff; border:1px solid #eee; border-radius:14px; padding:14px; display:flex; flex-direction:column; gap:10px; transition:all .2s; }
-    .card:hover { box-shadow:0 4px 10px rgba(0,0,0,0.05); transform:translateY(-2px); }
-    .card img { width:100%; height:180px; object-fit:cover; border-radius:10px; }
-    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; }
-    .muted { color:#777; font-size:.9rem; }
-    footer { margin-top:60px; padding:30px; text-align:center; font-size:.9rem; color:#888; border-top:1px solid #eee; }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project.PAW - 홈</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div data-include="header"></div>
+  <!-- 헤더 -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold text-primary" href="index.html">
+        <img src="images/logo_wordmark.svg" alt="Project.PAW" height="30"> Project.PAW
+      </a>
+      <div>
+        <a class="btn btn-outline-primary btn-sm me-2" href="project_list.html">후원하기</a>
+        <a class="btn btn-primary btn-sm" href="create.html">프로젝트 등록</a>
+      </div>
+    </div>
+  </nav>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>법인 없는 첫 후원 플랫폼</h1>
-    <p>현재 <strong>Beta 서비스</strong>입니다.<br/>
-       PG(결제) 연결 전까지는 <b>카카오톡 단톡방</b>을 통해 연결됩니다.</p>
-    <a href="projects.html" class="btn primary">🐾 지금 구조자 만나보기</a>
-    <a href="create.html" class="btn secondary">등록하기</a>
-  </section>
-
-  <!-- Projects Section -->
-  <section class="projects">
-    <h2>진행 중인 프로젝트</h2>
-    <div id="projects-grid" class="grid">
-      <div class="muted">불러오는 중...</div>
+  <!-- 철학 소개 -->
+  <section class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="fw-bold">도움은 본능, 연결은 선택</h2>
+      <p class="text-muted">숫자가 아니라 연결된 마음의 수를 보여주는 플랫폼</p>
     </div>
   </section>
 
-  <div data-include="footer"></div>
+  <!-- 진행 중인 프로젝트 -->
+  <main class="container my-5">
+    <h3 class="mb-4 fw-bold">진행 중인 구조 프로젝트</h3>
+    <div id="projectList" class="row g-3">
+      <!-- JS에서 카드 자동 렌더링 -->
+    </div>
+  </main>
+
+  <!-- 푸터 -->
+  <footer class="bg-light text-center py-4 mt-5 border-top">
+    <small class="text-muted">© 2025 Project.PAW</small>
+  </footer>
 
   <script type="module">
-    import { injectLayout } from './js/include.js';
-    import { apiListProjects } from './js/api.js';
+    import { db, collection, getDocs } from "./js/firebase.js";
 
-    injectLayout({ active:'home' });
+    async function loadProjects() {
+      const projectList = document.getElementById("projectList");
+      projectList.innerHTML = "";
 
-    const $grid = document.getElementById('projects-grid');
+      const snapshot = await getDocs(collection(db, "projects"));
+      snapshot.forEach(doc => {
+        const data = doc.data();
 
-    function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
+        const card = document.createElement("div");
+        card.className = "col-md-6 col-lg-4";
 
-    async function render(){
-      try {
-        const list = await apiListProjects({ status:'approved', limit:12 });
-        if(!list.length){
-          $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
-          return;
-        }
-        $grid.innerHTML = list.map(p => `
-          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <img src="${p.representativeImageUrl || 'img/placeholder.svg'}" alt=""/>
-            <h3>${p.name ?? '(이름 없음)'}</h3>
-            <div class="muted">${p.summary ?? ''}</div>
-            <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
-          </a>
-        `).join('');
-      } catch (e) {
-        console.error(e);
-        $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
-      }
+        card.innerHTML = `
+          <div class="card h-100 shadow-sm">
+            <img src="${data.mainImage || 'img/placeholder.svg'}" 
+                 class="card-img-top" alt="${data.name}" 
+                 style="height:200px; object-fit:cover;">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">${data.name}</h5>
+              <p class="card-text text-muted">${data.situation}</p>
+              <p class="mb-2"><small>목표 금액: ${data.goalAmount?.toLocaleString()} 원</small></p>
+              <a href="project.html?id=${doc.id}" class="btn btn-primary btn-sm mt-auto">상세보기</a>
+            </div>
+          </div>
+        `;
+        projectList.appendChild(card);
+      });
     }
 
-    render();
+    document.addEventListener("DOMContentLoaded", loadProjects);
   </script>
 </body>
 </html>
