--- a/project_list.html
+++ b/project_list.html
@@ -1,14 +1,74 @@
-<!doctype html><html lang="ko"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>프로젝트 목록</title><link rel="stylesheet" href="common.css"/><link rel="stylesheet" href="app.min.css"/>
-<style>.cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px}.card img{width:100%;height:180px;object-fit:cover;border-top-left-radius:16px;border-top-right-radius:16px}.card-body{padding:14px;display:flex;flex-direction:column;gap:8px}.chip{display:inline-block;padding:2px 10px;border-radius:999px;font-size:.8rem;border:1px solid #e5e7eb;color:#374151}.chip.approved{background:#ecfdf5;border-color:#bbf7d0;color:#065f46}.chip.pending{background:#fff7ed;border-color:#fed7aa;color:#9a3412}</style>
-</head><body><div data-include="header"></div><main class="container" style="padding:24px 16px">
-<h1 style="margin:0 0 10px">프로젝트</h1><input id="q" placeholder="검색" style="padding:10px;border:1px solid #e5e7eb;border-radius:10px;width:100%;max-width:360px"/>
-<div id="list" class="cards" style="margin-top:14px"></div></main><div data-include="footer"></div>
-<script type="module">
-import { injectLayout } from './js/include.js'; import { apiListProjects } from './js/api.js'; injectLayout();
-const $q=document.getElementById('q'), $list=document.getElementById('list'); const cover=p=>p.coverUrl||p.representativeImageUrl||'img/placeholder.svg';
-function match(p,q){ if(!q) return true; const hay=[p.name,p.summary,p.description,p.rescuerName].map(x=>(x||'')+'').join(' ').toLowerCase(); return hay.includes(q.toLowerCase()); }
-async function render(){ const all=await apiListProjects({status:'all'}); const list=all.filter(p=>match(p,$q.value.trim())); $list.innerHTML=list.map(p=>`
-<article class="card"><img src="${cover(p)}"/><div class="card-body"><div style="display:flex;justify-content:space-between;align-items:center;gap:8px"><strong>${p.name??'(이름 없음)'}</strong>${p.adminApproved?'<span class="chip approved">승인</span>':'<span class="chip pending">대기</span>'}</div><div class="muted">${p.summary??''}</div><div style="text-align:right"><a class="btn primary" style="padding:8px 12px;border-radius:10px" href="project.html?id=${encodeURIComponent(p.id)}">상세보기</a></div></div></article>`).join(''); if(!list.length) $list.innerHTML='<div class="muted">결과 없음</div>'; }
-$q.addEventListener('input', render); render();
-</script></body></html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project.PAW - 후원하기</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- 헤더 -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold text-primary" href="index.html">
+        <img src="images/logo_wordmark.svg" alt="Project.PAW" height="30"> Project.PAW
+      </a>
+      <div>
+        <a class="btn btn-outline-primary btn-sm me-2" href="index.html">홈</a>
+        <a class="btn btn-primary btn-sm" href="create.html">프로젝트 등록</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 후원 프로젝트 목록 -->
+  <main class="container my-5">
+    <h3 class="mb-4 fw-bold">후원 가능한 프로젝트</h3>
+    <div id="projectList" class="row g-3">
+      <!-- JS에서 카드 자동 렌더링 -->
+    </div>
+  </main>
+
+  <!-- 푸터 -->
+  <footer class="bg-light text-center py-4 mt-5 border-top">
+    <small class="text-muted">© 2025 Project.PAW</small>
+  </footer>
+
+  <script type="module">
+    import { db, collection, getDocs, query, orderBy } from "./js/firebase.js";
+
+    async function loadProjects() {
+      const projectList = document.getElementById("projectList");
+      projectList.innerHTML = "";
+
+      // 최신순 정렬
+      const q = query(collection(db, "projects"), orderBy("createdAt", "desc"));
+      const snapshot = await getDocs(q);
+
+      snapshot.forEach(doc => {
+        const data = doc.data();
+
+        const card = document.createElement("div");
+        card.className = "col-md-6 col-lg-4";
+
+        card.innerHTML = `
+          <div class="card h-100 shadow-sm">
+            <img src="${data.mainImage || 'img/placeholder.svg'}" 
+                 class="card-img-top" alt="${data.name}" 
+                 style="height:200px; object-fit:cover;">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">${data.name}</h5>
+              <p class="card-text text-muted">${data.situation}</p>
+              <p class="mb-2"><small>목표 금액: ${data.goalAmount?.toLocaleString()} 원</small></p>
+              <a href="project.html?id=${doc.id}" class="btn btn-outline-primary btn-sm mt-auto">상세보기</a>
+            </div>
+          </div>
+        `;
+        projectList.appendChild(card);
+      });
+    }
+
+    document.addEventListener("DOMContentLoaded", loadProjects);
+  </script>
+</body>
+</html>
