--- a/index.html
+++ b/index.html
@@ -8,28 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 헤더 -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-    <div class="container">
-      <a class="navbar-brand fw-bold text-primary" href="index.html">
-        <img src="images/logo_wordmark.svg" alt="Project.PAW" height="30"> Project.PAW
-      </a>
-      <div>
-        <a class="btn btn-outline-primary btn-sm me-2" href="project_list.html">후원하기</a>
-        <a class="btn btn-primary btn-sm" href="create.html">프로젝트 등록</a>
-      </div>
-    </div>
-  </nav>
+  <!-- ✅ 기존 네비/디자인 구조는 그대로 둠 -->
+  <div id="header"></div>
 
-  <!-- 철학 소개 -->
-  <section class="py-5 bg-light">
-    <div class="container text-center">
-      <h2 class="fw-bold">도움은 본능, 연결은 선택</h2>
-      <p class="text-muted">숫자가 아니라 연결된 마음의 수를 보여주는 플랫폼</p>
-    </div>
-  </section>
-
-  <!-- 진행 중인 프로젝트 -->
   <main class="container my-5">
     <h3 class="mb-4 fw-bold">진행 중인 구조 프로젝트</h3>
     <div id="projectList" class="row g-3">
@@ -37,10 +18,7 @@
     </div>
   </main>
 
-  <!-- 푸터 -->
-  <footer class="bg-light text-center py-4 mt-5 border-top">
-    <small class="text-muted">© 2025 Project.PAW</small>
-  </footer>
+  <div id="footer"></div>
 
   <script type="module">
     import { db, collection, getDocs } from "./js/firebase.js";
@@ -49,28 +27,34 @@
       const projectList = document.getElementById("projectList");
       projectList.innerHTML = "";
 
-      const snapshot = await getDocs(collection(db, "projects"));
-      snapshot.forEach(doc => {
-        const data = doc.data();
+      try {
+        const snapshot = await getDocs(collection(db, "projects"));
+        snapshot.forEach(doc => {
+          const data = doc.data();
 
-        const card = document.createElement("div");
-        card.className = "col-md-6 col-lg-4";
+          // ✅ mainImage 필드가 있으면 사용, 없으면 placeholder
+          const imageUrl = data.mainImage || "img/placeholder.svg";
 
-        card.innerHTML = `
-          <div class="card h-100 shadow-sm">
-            <img src="${data.mainImage || 'img/placeholder.svg'}" 
-                 class="card-img-top" alt="${data.name}" 
-                 style="height:200px; object-fit:cover;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">${data.name}</h5>
-              <p class="card-text text-muted">${data.situation}</p>
-              <p class="mb-2"><small>목표 금액: ${data.goalAmount?.toLocaleString()} 원</small></p>
-              <a href="project.html?id=${doc.id}" class="btn btn-primary btn-sm mt-auto">상세보기</a>
+          const card = document.createElement("div");
+          card.className = "col-md-6 col-lg-4";
+
+          card.innerHTML = `
+            <div class="card h-100 shadow-sm">
+              <img src="${imageUrl}" class="card-img-top" alt="${data.name}" style="height:200px; object-fit:cover;">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">${data.name}</h5>
+                <p class="card-text text-muted">${data.situation}</p>
+                <p class="mb-2"><small>목표 금액: ${(data.goalAmount || 0).toLocaleString()} 원</small></p>
+                <a href="project.html?id=${doc.id}" class="btn btn-primary btn-sm mt-auto">상세보기</a>
+              </div>
             </div>
-          </div>
-        `;
-        projectList.appendChild(card);
-      });
+          `;
+          projectList.appendChild(card);
+        });
+      } catch (err) {
+        console.error("프로젝트 불러오기 실패:", err);
+        projectList.innerHTML = `<p class="text-danger">프로젝트를 불러오지 못했습니다.</p>`;
+      }
     }
 
     document.addEventListener("DOMContentLoaded", loadProjects);
