--- a/create.html
+++ b/create.html
@@ -74,4 +74,8 @@ alert('⏳ 업로드를 시작합니다. 잠시만 기다려주세요!'); submit
   catch(err){ alert('업로드 실패: '+(err.message||'')); }
   finally{ submitBtn.classList.remove('disabled'); submitBtn.textContent='등록하기'; }
 });
-</script></body></html>
+</script>
+<script type="module" src="assets/js/create.js"></script>
+</body>
+
+</body></html>
