--- a/admin.html
+++ b/admin.html
@@ -132,6 +132,7 @@
     $refresh.addEventListener('click', render);
 
     render();
+  <script type="module" src="assets/js/admin.js"></script>
   </script>
 </body>
 </html>
