--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <div data-include="footer"></div>
 
+  <!-- 내부 로직 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
@@ -54,7 +55,6 @@
     injectLayout({ active:'home' });
 
     const $grid = document.getElementById('projects-grid');
-
     function fmt(n){ return Number(n||0).toLocaleString('ko-KR'); }
 
     async function render(){
@@ -79,8 +79,9 @@
     }
 
     render();
-   <script type="module" src="assets/js/index.js"></script>
-</body>
+  </script>
 
+  <!-- index.js 별도 모듈 -->
+  <script type="module" src="assets/js/index.js"></script>
 </body>
 </html>
